--- a/src/renderer/app/components/environments-menu/environments-menu.component.html
+++ b/src/renderer/app/components/environments-menu/environments-menu.component.html
@@ -7,7 +7,7 @@
           (click)="addEnvironment()"
           ngbTooltip="New environment"
         >
-          <i class="material-icons">post_add</i>
+          <app-svg icon="post_add"></app-svg>
         </a>
       </li>
       <li class="nav-item">
@@ -16,85 +16,118 @@
           (click)="openEnvironment()"
           ngbTooltip="Open environment"
         >
-          <i class="material-icons">folder_open</i>
+          <app-svg icon="folder_open"></app-svg>
         </a>
       </li>
     </ul>
   </div>
   <ng-container *ngIf="environments$ | async as environments">
-    <ul
-      class="nav flex-column flex-fill menu-list"
-      #environmentsMenu
-      cdkDropList
-      (cdkDropListDropped)="reorderEnvironments($event)"
-    >
-      <ng-container *ngIf="environmentsStatus$ | async as environmentsStatus">
-        <li
-          *ngFor="let environment of environments"
-          class="nav-item"
-          cdkDrag
-          cdkDragLockAxis="y"
-          cdkDragBoundary=".environments-menu .nav.menu-list"
-        >
-          <a
-            class="nav-link"
-            [ngClass]="{
-              active: (activeEnvironment$ | async)?.uuid === environment.uuid,
-              running:
-                environmentsStatus[environment.uuid].running &&
-                !environmentsStatus[environment.uuid].needRestart,
-              'need-restart': environmentsStatus[environment.uuid].needRestart
-            }"
-            (click)="selectEnvironment(environment.uuid)"
-            (contextmenu)="openContextMenu(environment.uuid, $event)"
+    <ng-container *ngIf="activeEnvironment$ | async as activeEnvironment">
+      <ul
+        class="nav flex-column flex-fill menu-list"
+        #environmentsMenu
+        cdkDropList
+        (cdkDropListDropped)="reorderEnvironments($event)"
+      >
+        <ng-container *ngIf="environmentsStatus$ | async as environmentsStatus">
+          <li
+            *ngFor="let environment of environments"
+            class="nav-item"
+            cdkDrag
+            [cdkDragDisabled]="dragDisabled"
+            cdkDragLockAxis="y"
+            cdkDragBoundary=".environments-menu .nav.menu-list"
           >
-            <div class="d-flex">
-              <div class="mw0 pr-2">
-                <div class="ellipsis environment-name">
-                  {{ environment.name ? environment.name : '&nbsp;' }}
-                </div>
-                <div class="menu-subtitle ellipsis">
-                  <span
-                    >{{ environment.hostname }}:{{ environment.port }}/{{
-                      environment.endpointPrefix
-                    }}</span
+            <a
+              class="nav-link"
+              [ngClass]="{
+                active: activeEnvironment?.uuid === environment.uuid,
+                running:
+                  environmentsStatus[environment.uuid].running &&
+                  !environmentsStatus[environment.uuid].needRestart,
+                'need-restart': environmentsStatus[environment.uuid].needRestart
+              }"
+              (click)="selectEnvironment(environment.uuid)"
+              (contextmenu)="openContextMenu(environment.uuid, $event)"
+            >
+              <div class="d-flex">
+                <div class="mw0 pr-2" [formGroup]="activeEnvironmentForm">
+                  <div
+                    *ngIf="
+                      !editingName ||
+                      activeEnvironment?.uuid !== environment.uuid
+                    "
+                    class="ellipsis environment-name"
+                    [ngClass]="{
+                      'environment-name-edit':
+                        activeEnvironment?.uuid === environment.uuid
+                    }"
+                    (click)="
+                      activeEnvironment?.uuid === environment.uuid &&
+                        handleNameClick($event)
+                    "
                   >
+                    {{ environment.name ? environment.name : '&nbsp;' }}
+                  </div>
+                  <input
+                    *ngIf="
+                      editingName &&
+                      activeEnvironment?.uuid === environment.uuid
+                    "
+                    class="form-control invisible-input"
+                    formControlName="name"
+                    [appFocusOnEvent]="focusableInputs.ENVIRONMENT_NAME"
+                    type="text"
+                    (click)="$event.stopPropagation()"
+                    (keydown)="submitEnvironmentName($event)"
+                    (blur)="disableNameEdit()"
+                  />
+                  <div class="menu-subtitle ellipsis">
+                    <span
+                      >{{ environment.hostname }}:{{ environment.port }}/{{
+                        environment.endpointPrefix
+                      }}</span
+                    >
+                  </div>
+                </div>
+                <div class="d-flex flex-column ml-auto">
+                  <div class="server-icons server-icons-proxy-mode">
+                    <app-svg
+                      *ngIf="environment.proxyMode"
+                      class="text-primary"
+                      icon="security"
+                      size="12"
+                      ngbTooltip="Proxy mode enabled"
+                    ></app-svg>
+                    <span *ngIf="!environment.proxyMode">&nbsp;</span>
+                  </div>
+                  <div class="server-icons server-icons-https">
+                    <app-svg
+                      *ngIf="environment.https"
+                      class="text-warning"
+                      icon="https"
+                      size="12"
+                      ngbTooltip="HTTPS enabled"
+                    ></app-svg>
+                    <span *ngIf="!environment.https">&nbsp;</span>
+                  </div>
+                  <div class="server-icons server-icons-cors">
+                    <app-svg
+                      *ngIf="environment.cors"
+                      class="text-info"
+                      icon="multiple_stop"
+                      size="12"
+                      ngbTooltip="CORS enabled"
+                    ></app-svg>
+                    <span *ngIf="!environment.cors">&nbsp;</span>
+                  </div>
                 </div>
               </div>
-              <div class="d-flex flex-column ml-auto">
-                <div class="server-icons server-icons-proxy-mode">
-                  <i
-                    *ngIf="environment.proxyMode"
-                    class="material-icons"
-                    ngbTooltip="Proxy mode enabled"
-                    >security</i
-                  >
-                  <span *ngIf="!environment.proxyMode">&nbsp;</span>
-                </div>
-                <div class="server-icons server-icons-https">
-                  <i
-                    *ngIf="environment.https"
-                    class="material-icons"
-                    ngbTooltip="HTTPS enabled"
-                    >https</i
-                  >
-                  <span *ngIf="!environment.https">&nbsp;</span>
-                </div>
-                <div class="server-icons server-icons-cors">
-                  <i
-                    *ngIf="environment.cors"
-                    class="material-icons"
-                    ngbTooltip="CORS enabled"
-                    >multiple_stop</i
-                  >
-                  <span *ngIf="!environment.cors">&nbsp;</span>
-                </div>
-              </div>
-            </div>
-          </a>
-        </li>
-      </ng-container>
-    </ul>
+            </a>
+          </li>
+        </ng-container>
+      </ul>
+    </ng-container>
   </ng-container>
   <div
     appResizeColumn
