--- a/src/renderer/app/components/environments-menu/environments-menu.component.scss
+++ b/src/renderer/app/components/environments-menu/environments-menu.component.scss
@@ -9,26 +9,7 @@
 
   position: relative; // we need this for the resize-column
 
-  .server-icons {
-    opacity: 0.7;
-    font-size: 12px;
-    line-height: 16px;
-
-    i {
-      font-size: 12px;
-      vertical-align: middle;
-    }
-
-    &-proxy-mode {
-      color: $blue;
-    }
-
-    &-https {
-      color: $yellow;
-    }
-
-    &-cors {
-      color: $cyan;
-    }
+  .environment-name-edit {
+    cursor: text;
   }
 }
